...
            <objects>
                <navigationController title="NewsNavigation" id="jkm-NQ-JG7" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="News" image="megaphone_active" selectedImage="megaphone_active" id="6sU-KF-SR7">
                        <color key="badgeColor" red="0.92941176469999998" green="0.30588235289999999" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
                    </tabBarItem>
...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yYI-n1-ob3">
                                                    <rect key="frame" x="146" y="27.5" width="205" height="24"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="newsTableLabel"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                    <color key="textColor" red="0.92941176469999998" green="0.30588235289999999" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
...
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="newsTableId"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zFe-5H-3HK">
                                        <rect key="frame" x="480" y="316" width="48" height="24"/>
                                        <accessibility key="accessibilityConfiguration" identifier="teachingDetailLabel"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="123" id="tft-x8-QT3"/>
...
        <scene sceneID="KdO-bi-k75">
            <objects>
                <tableViewController title="Search" id="nQr-Vz-I92" customClass="SearchViewController" customModule="MisionMujer" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Wav-Ue-XP9">
                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
...
                                        <rect key="frame" x="12" y="40" width="1000" height="488"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="homeLatestDetailBtn"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                        <nil key="highlightedColor"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="homeLatestTitle"/>
                                        </userDefinedRuntimeAttributes>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="235" translatesAutoresizingMaskIntoConstraints="NO" id="AM6-bq-kk3">
                                        <rect key="frame" x="20" y="492" width="714.5" height="17"/>
                                        <accessibility key="accessibilityConfiguration" identifier="homeLatestDescription"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <color key="textColor" red="0.85142886640000004" green="0.85142886640000004" blue="0.85142886640000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <nil key="highlightedColor"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="homeLatestDuration"/>
                                        </userDefinedRuntimeAttributes>
                                    </label>
...
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" semanticContentAttribute="forceLeftToRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZWu-5p-Qtb">
                                                            <rect key="frame" x="84.5" y="111" width="48" height="24"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="exploreCategoryLabel"/>
                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                            <color key="textColor" red="1" green="0.98624428419999999" blue="0.97910810729999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                        </cells>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="exploreCategoryCollection"/>
                                        </userDefinedRuntimeAttributes>
                                    </collectionView>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="exploreView"/>
                                <constraints>
                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="roi-wO-hP4" secondAttribute="trailing" constant="20" symbolic="YES" id="GfU-lP-RZu"/>
...
