...
    var title:String
    {
        get
        {
            switch self
            {
            case .festival : return "Summer Festival"
            case .newClassTime : return "New Time available"
            case .newTeacher : return "Welcome new Teacher"
            }
        }
    }
    
...
